tests/specs/ecosystem/custom_ui/utils/0_1_1.test
custom-ui/utils/0.1.1
-- deno.lock --
{}
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: Module not found "file://<tmpdir>/src/vue/vue".
    at file://<tmpdir>/src/vue/withInstall.ts:1:26

